tests/specs/invalid/empty_file.spec
# TEST_MODE: parse_only
# EXPECT: fail
 